# rust-media-player

./: .gitignore  Cargo.toml  imgui.ini
src/: main.rs
src/amp/: app.rs  mod.rs  window.rs
src/amp/renderer/: imgui_renderer.rs  mod.rs  renderer.rs
src/amp/renderer/opengl/: mod.rs  opengl.rs  texture.rs
src/libamp/: decoder.rs  media_file.rs  mod.rs  utils.rs
