[package]
name = "media_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_glfw_gl = { git = "https://github.com/shivang51/egui_glfw_gl", version = "0.13.1" }
ffmpeg-sys-next = "6.0.1"
gl = "0.14.0"
glfw = "0.51.0"
